# proyectoCompleto

./: API_CONTRATO_BACKEND.md  INFORME_MEJORAS.md  README.md
app-backend/: .env.example  .gitignore  Dockerfile  README.md  app.db  check_db.py  docker-compose.yml  pyproject.toml  requirements.txt  seed_admin.py  test_req.py
app-backend/alembic/: env.py
app-backend/alembic/versions/: 01f3775a0214_add_tables.py
app-backend/app/: main.py
app-backend/app/api/: deps.py
app-backend/app/api/v1/: router.py
app-backend/app/api/v1/endpoints/: auth.py  health.py  transactions.py
app-backend/app/core/: config.py  security.py
app-backend/app/db/: session.py
app-backend/app/models/: __init__.py  transaction.py  user.py
app-backend/app/schemas/: transaction.py  user.py
app-backend/scripts/: setup.sh
app-backend/tests/api/: test_health.py
frontend_proyect/: .env.example  BACKEND_INTEGRATION.md  BACKEND_TASKS.md  FRONTEND_TASKS.md  MISSING_FRONTEND.md  README.md  SPRINT_PLAN.md  index.html  package-lock.json  package.json
frontend_proyect/src/: api.js  main.js  utils.js
frontend_proyect/src/state/: state.js
frontend_proyect/src/styles/: main.css
frontend_proyect/src/views/: auth.js  dashboard.js  landing.js  recommendations.js  reports.js  settings.js  transactions.js
